<resources>
    <string name="app_name">Restaurant Health Inspector</string>
    <string name="address">Address:\u0020 </string>
    <string name="GPS">GPS Coordinates:\u0020 </string>
    <string name="issues_found">Issues found</string>
    <string name="hazard_level">Hazard level</string>
    <string name="inspection_date">Inspection date</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="gps_coords">GPS Coords</string>
    <string name="textview">TextView</string>
    <string name="nature">Nature:\u0020 </string>
    <string name="description_text">description text</string>
    <string name="severity">Severity:\u0020 </string>
    <string name="inspection_type">Inspection type</string>
    <string name="critical_issues_found"># critical issues found</string>
    <string name="non_critical_issues_found"># non-critical issues found</string>
    <string name="hazard_level_">Hazard Level:\u0020 </string>
    <string name="gps">GPS Coordinates:\u0020 </string>
    <string name="address_">Address:\u0020 </string>
    <string name="days_ago"> days ago</string>
    <string name="critical_iss"># critical issues:\u0020 </string>
    <string name="non_critical_iss"># non-critical issues:\u0020 </string>
    <string name="no_inspection_found">No inspections found</string>
    <string name="_days_ago"> days ago</string>
    <string name="_" />
    <string name="crit_iss_0">Critical issues:\u0020 0</string>
    <string name="crit_iss">Critical issues:\u0020 </string>
    <string name="comma">, </string>
    <string name="severity_">Severity:\u0020 </string>
    <string name="crit">CRITICAL</string>
    <string name="non_crit">NON-CRITICAL</string>
    <string name="nature_">Nature:\u0020 </string>
    <string name="hazard_level__">Hazard Level:\u0020  </string>
    <string name="num_noncrit"># Non-Critical Issues:\u0020 </string>
    <string name="num_crit"># Critical Issues:\u0020 </string>
    <string name="ins_type">Inspection Type:\u0020 </string>
    <string name="rout">ROUTINE</string>
    <string name="fu">FOLLOW-UP</string>
    <string name="title_activity_maps">Map</string>
    <string name="restaurant_icon">restaurant icon</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="reset_button">RESET\nSEARCH</string>

    <string-array name="hazards">
        <item>Hazard Lvl</item>
        <item>LOW</item>
        <item>MODERATE</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="issues">
        <item>max CRIT-VIOs w/n last yr</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <string-array name="favorite">
        <item>All</item>
        <item>Fav Only</item>
    </string-array>
    <string name="hazard_low">LOW</string>
    <string name="violation_description">violation description</string>
    <string name="food">FOOD</string>
    <string name="hazard_moderate">MODERATE</string>
    <string name="hazard_high">HIGH</string>
    <string name="last_update">The last update is 20 hours ago</string>
    <string name="download_update">Do you want to download the update?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="equipment">EQUIPMENT</string>
    <string name="pest">PEST</string>
    <string name="employee">EMPLOYEE</string>
    <string name="permit">PERMIT</string>
    <string name="enter_restaurant_name">Enter Restaurant Name</string>
    <string name="no_inspection_found_fav_restaurants">No new inspections found for your favourite restaurants!</string>
    <string name="ok">OK</string>
    <string name="search_reset">Search Reset!</string>

</resources>