<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RestaurantDetails"
    android:background="#2D131212"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="9dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/InspectionReport_text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="29dp"
            tools:layout_editor_absoluteY="32dp" />

        <TextView
            android:id="@+id/InspectionReport_text_inspection_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/inspection_type"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/InspectionReport_text_num_critical_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/critical_issues_found"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/InspectionReport_text_num_non_critical_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/non_critical_issues_found"
            android:textSize="19sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/InspectionReport_icon_hazard_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:maxWidth="66dp"
                android:maxHeight="66dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/InspectionReport_text_hazard_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:text="@string/hazard_level_"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:layout_margin="3dp"
        android:id="@+id/InspectionReport_list_inspection_report"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

</LinearLayout>