<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".ui.RestaurantDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/RestaurantDetails_text_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="32dp" />

            <com.like.LikeButton
                app:icon_type="star"
                app:icon_size="15dp"
                android:id="@+id/star_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/RestaurantDetails_text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/restaurant_address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RestaurantDetails_text_GPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="myOnClick"
            android:text="@string/gps_coords"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/RestaurantDetails_list_inspection_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>